# kitsu-engine

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/composer/: controller.h
src/painter/: CMakeLists.txt  GraphicsObject.h  Scene.h  SceneTree.cpp  SceneTree.h  Shapes.cpp  Shapes.h  painter.cpp  painter.h
